--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
   <div class="wrap">
     <header>
-      <img src="https://th.bing.com/th/id/R.e981a076438938f94b4bdef2cc28ed8c?rik=Tl8jWSDOnbPScw&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fair-france-logo-png-air-france-logo-airfrance-skyteam-symbol-5650.png&ehk=%2bzIUC9nKAkbnVe1Gq4lsFCWxLCR3mhuQeeenhYbyNyQ%3d&risl=&pid=ImgRaw&r=0" alt="Air France Logo" onerror="this.style.display='none'">
+      <img src="https://static.vecteezy.com/system/resources/previews/009/387/270/original/maintenance-icon-simple-solid-style-tool-wrench-and-screwdriver-spanner-sign-home-services-concept-glyph-illustration-symbol-element-isolated-on-white-background-eps-10-vector.jpg" onerror="this.style.display='none'">
       <h1>Quiz Air France</h1>
     </header>
     <header>
@@ -79,8 +79,7 @@
         margin-bottom: 12px;
         font-weight: 700;
       ">
-        Propriété exclusive d'un Agent AF. Toute diffusion ou reproduction non autorisée est interdite. En cas de fuite, merci de contacter kneycie@gmail.com
-        Toute diffusion ou utilisation non autorisée est interdite. 
+        Maintenance en cours, le quizz est en cours de création 30 questions sont en cours de création, vous pouvez commencer à le faire, progressivement, les questions seront ajoutées.
       </p>
       <img src="..." alt="Air France Logo" onerror="this.style.display='none'">
       <h1>Quiz Air France</h1>
