--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
 const BASE = [
   {t:"Un client accompagné d'un bébé peut voyager avec un SVAN?", o:["Oui","Non"], c:[0], e:"Non"},
   {t:"Quels sont les clients autorisé à acheter un surclassement La première?", o:["Tous les clients munis d'un billet Business","Tout le monde peu importe la catégorie de client","Les platinum, Gold, Ultimate"], c:[0], e:"Tous les clients munis d'un billet Business sont éligibles sauf les clients voyageant avec un bébé."},
-  {t:"L'offre Cash&Miles lors de l'achat d'un suclassement La Première est-il permis?", o:["Non","Oui","Oui Uniquement pour les clients platinum et de niveaux supérieurs","Oui uniquement pour les clients Platinum"], c:[2], e:"L'offre miles et cash &m miles n'est disponible que pour nos clients Platinum et de niveaux supérieurs ( cela afin de garder une cohérence avec les règles des billets primes et surclassements primes)"}
-   {t:"Un client accompagné d'un bébé peut voyager avec un SVAN?", o:["Oui","Non"], c:[0], e:"Non"},
+  {t:"L'offre Cash&Miles lors de l'achat d'un suclassement La Première est-il permis?", o:["Non","Oui","Oui Uniquement pour les clients platinum et de niveaux supérieurs","Oui uniquement pour les clients Platinum"], c:[2], e:"L'offre miles et cash &m miles n'est disponible que pour nos clients Platinum et de niveaux supérieurs cela afin de garder une cohérence avec les règles des billets primes et surclassements primes"}
 ];
 
 // =====================
